--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "dotenv": "^16.3.1",
+    "moment": "^2.29.4",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
