--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-spinners": "^0.13.8",
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
     "tailwind-scrollbar": "^3.0.4",
